<resources>
    <string name="app_name">CurrencyExchange</string>
    <string name="submit">Submit</string>
    <string name="currency_exchange">Currency Exchange</string>
    <string name="my_balance">My Ballances</string>
    <string name="receive">Receive</string>
    <string name="sell">Sell</string>
    <string name="currency_converted">Currency Converted</string>
    <string name="done">Done</string>
    <string name="currency_convert_success">You have converted %1$s to %2$s. Commission Fee is - %3$s .</string>
    <string name="currency_converter">Currency converter</string>
    <string name="login_with_google">Login with Google</string>
    <string name="insufficient_balance">Insufficient balance</string>
</resources>